# ecos

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  index.md
examples/: basic_usage.py
src/ecos/: __init__.py  events.py  projections.py  runtime.py  skills.py
tests/: conftest.py  test_events.py
